@@ -57,13 +57,14 @@ import org.apache.ws.commons.schema.XmlSchemaSimpleType;
 import org.apache.ws.commons.schema.XmlSchemaSimpleTypeRestriction;
 import org.apache.ws.commons.schema.utils.NamespaceMap;
 
-import org.junit.Assert;
 import org.junit.Test;
+
+import static org.junit.Assert.fail;
 
 /**
  *
  */
-public class ImportRepairTest extends Assert {
+public class ImportRepairTest {
 
     static boolean dumpSchemas;
 
@@ -138,7 +139,7 @@ public class ImportRepairTest extends Assert {
 
     Method findMethod(Object o, String name) {
         for (Method m: o.getClass().getMethods()) {
-            if (m.getName() == name) {
+            if (m.getName().equals(name)) {
                 return m;
             }
         }
@@ -174,11 +175,11 @@ public class ImportRepairTest extends Assert {
                 //bug in the JDK doesn't set this, but accesses it
                 config.setParameter("http://www.oracle.com/xml/jaxp/properties/xmlSecurityPropertyManager",
                                     Class.forName("com.sun.org.apache.xerces.internal.utils.XMLSecurityPropertyManager")
-                                        .newInstance());
+                                    .getDeclaredConstructor().newInstance());
 
                 config.setParameter("http://apache.org/xml/properties/security-manager",
                                     Class.forName("com.sun.org.apache.xerces.internal.utils.XMLSecurityManager")
-                                        .newInstance());
+                                    .getDeclaredConstructor().newInstance());
             } catch (Throwable t) {
                 //ignore
             }
@@ -206,7 +207,7 @@ public class ImportRepairTest extends Assert {
             name = name.replace("xs.LS", "impl.xs.util.LS");
             Class<?> c = Class.forName(name);
             Object inputList = c.getConstructor(LSInput[].class, Integer.TYPE)
-            .newInstance(inputs.toArray(new LSInput[inputs.size()]), inputs.size());
+            .newInstance(inputs.toArray(new LSInput[0]), inputs.size());
 
             findMethod(schemaLoader, "loadInputList").invoke(schemaLoader, inputList);
         } catch (InvocationTargetException ite) {
