@@ -25,25 +25,30 @@ import java.util.HashSet;
 import java.util.Properties;
 import java.util.Set;
 
-import javax.resource.ResourceException;
-import javax.resource.spi.ConnectionManager;
-import javax.resource.spi.ManagedConnection;
 import javax.security.auth.Subject;
 import javax.xml.namespace.QName;
 
-
+import jakarta.resource.ResourceException;
+import jakarta.resource.spi.ConnectionManager;
+import jakarta.resource.spi.ManagedConnection;
 import org.apache.cxf.Bus;
 import org.apache.cxf.BusFactory;
 import org.apache.cxf.connector.CXFConnectionFactory;
 import org.apache.hello_world_soap_http.Greeter;
 
 import org.easymock.EasyMock;
-import org.junit.Assert;
 import org.junit.Before;
 import org.junit.Test;
 
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertNotEquals;
+import static org.junit.Assert.assertNotNull;
+import static org.junit.Assert.assertSame;
+import static org.junit.Assert.assertTrue;
+import static org.junit.Assert.fail;
 
-public class ManagedConnectionFactoryImplTest extends Assert {
+
+public class ManagedConnectionFactoryImplTest {
 
     protected ManagedConnectionFactoryImpl mci;
 
@@ -98,7 +103,7 @@ public class ManagedConnectionFactoryImplTest extends Assert {
 
     @Test
     public void testSetEJBServicePropertiesPollInterval() throws Exception {
-        final Integer value = new Integer(10);
+        final Integer value = Integer.valueOf(10);
         Properties p = new Properties();
         ManagedConnectionFactoryImpl mcf = new ManagedConnectionFactoryImpl(p);
 
@@ -144,7 +149,7 @@ public class ManagedConnectionFactoryImplTest extends Assert {
         assertTrue("not Object's hashCode method", hashCodeMethod != Object.class
             .getDeclaredMethod("hashCode", (Class[])null));
         assertEquals("equal with its self", mci, mci);
-        assertTrue("not equal with another", !mci.equals(new ManagedConnectionFactoryImpl()));
+        assertNotEquals("not equal with another", mci, new ManagedConnectionFactoryImpl());
     }
 
     @Test
