@@ -25,11 +25,14 @@ import org.omg.CORBA.ORB;
 import org.omg.CORBA.TCKind;
 
 import org.junit.After;
-import org.junit.Assert;
 import org.junit.Before;
 import org.junit.Test;
 
-public class CorbaPrimitiveHandlerTest extends Assert {
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertNotNull;
+import static org.junit.Assert.assertTrue;
+
+public class CorbaPrimitiveHandlerTest {
 
     private ORB orb;
 
@@ -63,7 +66,7 @@ public class CorbaPrimitiveHandlerTest extends Assert {
 
         obj.setValueFromData(val.toString());
         String result = obj.getDataFromValue();
-        assertTrue(val.toString().equals(result));
+        assertEquals(val.toString(), result);
 
         obj.setValue(val);
         Object resultObj = obj.getValue();
@@ -75,7 +78,7 @@ public class CorbaPrimitiveHandlerTest extends Assert {
 
     @Test
     public void testCreateCorbaChararacter() {
-        Character val = new Character('c');
+        Character val = Character.valueOf('c');
         CorbaPrimitiveHandler obj =
             new CorbaPrimitiveHandler(new QName("char"),
                                       CorbaConstants.NT_CORBA_CHAR,
@@ -84,10 +87,10 @@ public class CorbaPrimitiveHandlerTest extends Assert {
         assertNotNull(obj);
 
         //CXF corba maps the XML char type to a Byte so we need to provide the string data as a Byte value
-        Byte byteValue = new Byte((byte)val.charValue());
+        Byte byteValue = Byte.valueOf((byte)val.charValue());
         obj.setValueFromData(byteValue.toString());
         String result = obj.getDataFromValue();
-        Byte byteResult = new Byte(result);
+        Byte byteResult = Byte.valueOf(result);
         assertTrue(byteResult.byteValue() == byteValue.byteValue());
 
         // However, internally, we also hold the data as a character to make it easier to marshal the data
@@ -103,7 +106,7 @@ public class CorbaPrimitiveHandlerTest extends Assert {
 
     @Test
     public void testCreateCorbaWChararacter() {
-        Character val = new Character('w');
+        Character val = Character.valueOf('w');
         CorbaPrimitiveHandler obj =
             new CorbaPrimitiveHandler(new QName("wchar"),
                                       CorbaConstants.NT_CORBA_WCHAR,
@@ -125,7 +128,7 @@ public class CorbaPrimitiveHandlerTest extends Assert {
 
     @Test
     public void testCreateCorbaOctet() {
-        Byte val = new Byte((byte)100);
+        Byte val = Byte.valueOf((byte)100);
         CorbaPrimitiveHandler obj =
             new CorbaPrimitiveHandler(new QName("octet"),
                                       CorbaConstants.NT_CORBA_OCTET,
@@ -135,7 +138,7 @@ public class CorbaPrimitiveHandlerTest extends Assert {
 
         obj.setValueFromData(val.toString());
         String result = obj.getDataFromValue();
-        assertTrue(val.toString().equals(result));
+        assertEquals(val.toString(), result);
 
         obj.setValue(val);
         Object resultObj = obj.getValue();
@@ -147,7 +150,7 @@ public class CorbaPrimitiveHandlerTest extends Assert {
 
     @Test
     public void testCreateCorbaShort() {
-        Short val = new Short((short)1234);
+        Short val = Short.valueOf((short)1234);
         CorbaPrimitiveHandler obj =
             new CorbaPrimitiveHandler(new QName("short"),
                                       CorbaConstants.NT_CORBA_SHORT,
@@ -157,7 +160,7 @@ public class CorbaPrimitiveHandlerTest extends Assert {
 
         obj.setValueFromData(val.toString());
         String result = obj.getDataFromValue();
-        assertTrue(val.toString().equals(result));
+        assertEquals(val.toString(), result);
 
         obj.setValue(val);
         Object resultObj = obj.getValue();
@@ -169,7 +172,7 @@ public class CorbaPrimitiveHandlerTest extends Assert {
 
     @Test
     public void testCreateCorbaUShort() {
-        Short val = new Short((short)4321);
+        Short val = Short.valueOf((short)4321);
         CorbaPrimitiveHandler obj =
             new CorbaPrimitiveHandler(new QName("ushort"),
                                       CorbaConstants.NT_CORBA_USHORT,
@@ -179,7 +182,7 @@ public class CorbaPrimitiveHandlerTest extends Assert {
 
         obj.setValueFromData(val.toString());
         String result = obj.getDataFromValue();
-        assertTrue(val.toString().equals(result));
+        assertEquals(val.toString(), result);
 
         obj.setValue(val);
         Object resultObj = obj.getValue();
@@ -191,7 +194,7 @@ public class CorbaPrimitiveHandlerTest extends Assert {
 
     @Test
     public void testCreateCorbaLong() {
-        Integer val = new Integer(123456);
+        Integer val = Integer.valueOf(123456);
         CorbaPrimitiveHandler obj =
             new CorbaPrimitiveHandler(new QName("long"),
                                       CorbaConstants.NT_CORBA_LONG,
@@ -201,7 +204,7 @@ public class CorbaPrimitiveHandlerTest extends Assert {
 
         obj.setValueFromData(val.toString());
         String result = obj.getDataFromValue();
-        assertTrue(val.toString().equals(result));
+        assertEquals(val.toString(), result);
 
         obj.setValue(val);
         Object resultObj = obj.getValue();
@@ -213,7 +216,7 @@ public class CorbaPrimitiveHandlerTest extends Assert {
 
     @Test
     public void testCreateCorbaULong() {
-        Integer val = new Integer(654321);
+        Integer val = Integer.valueOf(654321);
         CorbaPrimitiveHandler obj =
             new CorbaPrimitiveHandler(new QName("ulong"),
                                       CorbaConstants.NT_CORBA_ULONG,
@@ -223,7 +226,7 @@ public class CorbaPrimitiveHandlerTest extends Assert {
 
         obj.setValueFromData(val.toString());
         String result = obj.getDataFromValue();
-        assertTrue(val.toString().equals(result));
+        assertEquals(val.toString(), result);
 
         obj.setValue(val);
         Object resultObj = obj.getValue();
@@ -235,7 +238,7 @@ public class CorbaPrimitiveHandlerTest extends Assert {
 
     @Test
     public void testCreateCorbaLongLong() {
-        Long val = new Long(123456789);
+        Long val = Long.valueOf(123456789);
         CorbaPrimitiveHandler obj =
             new CorbaPrimitiveHandler(new QName("longlong"),
                                       CorbaConstants.NT_CORBA_LONGLONG,
@@ -245,7 +248,7 @@ public class CorbaPrimitiveHandlerTest extends Assert {
 
         obj.setValueFromData(val.toString());
         String result = obj.getDataFromValue();
-        assertTrue(val.toString().equals(result));
+        assertEquals(val.toString(), result);
 
         obj.setValue(val);
         Object resultObj = obj.getValue();
@@ -257,7 +260,7 @@ public class CorbaPrimitiveHandlerTest extends Assert {
 
     @Test
     public void testCreateCorbaULongLong() {
-        Long val = new Long(987654321);
+        Long val = Long.valueOf(987654321);
         CorbaPrimitiveHandler obj =
             new CorbaPrimitiveHandler(new QName("ulonglong"),
                                       CorbaConstants.NT_CORBA_ULONGLONG,
@@ -267,7 +270,7 @@ public class CorbaPrimitiveHandlerTest extends Assert {
 
         obj.setValueFromData(val.toString());
         String result = obj.getDataFromValue();
-        assertTrue(val.toString().equals(result));
+        assertEquals(val.toString(), result);
 
         obj.setValue(val);
         Object resultObj = obj.getValue();
@@ -279,7 +282,7 @@ public class CorbaPrimitiveHandlerTest extends Assert {
 
     @Test
     public void testCreateCorbaFloat() {
-        Float val = new Float(1234.56);
+        Float val = Float.valueOf(1234.56f);
         CorbaPrimitiveHandler obj =
             new CorbaPrimitiveHandler(new QName("float"),
                                       CorbaConstants.NT_CORBA_FLOAT,
@@ -289,7 +292,7 @@ public class CorbaPrimitiveHandlerTest extends Assert {
 
         obj.setValueFromData(val.toString());
         String result = obj.getDataFromValue();
-        assertTrue(val.toString().equals(result));
+        assertEquals(val.toString(), result);
 
         obj.setValue(val);
         Object resultObj = obj.getValue();
@@ -301,7 +304,7 @@ public class CorbaPrimitiveHandlerTest extends Assert {
 
     @Test
     public void testCreateCorbaDouble() {
-        Double val = new Double(123456.789);
+        Double val = Double.valueOf(123456.789);
         CorbaPrimitiveHandler obj =
             new CorbaPrimitiveHandler(new QName("double"),
                                       CorbaConstants.NT_CORBA_DOUBLE,
@@ -311,7 +314,7 @@ public class CorbaPrimitiveHandlerTest extends Assert {
 
         obj.setValueFromData(val.toString());
         String result = obj.getDataFromValue();
-        assertTrue(val.toString().equals(result));
+        assertEquals(val.toString(), result);
 
         obj.setValue(val);
         Object resultObj = obj.getValue();
@@ -331,16 +334,16 @@ public class CorbaPrimitiveHandlerTest extends Assert {
                                       null);
         assertNotNull(obj);
 
-        obj.setValueFromData(val.toString());
+        obj.setValueFromData(val);
         String result = obj.getDataFromValue();
-        assertTrue(val.equals(result));
+        assertEquals(val, result);
 
         obj.setValue(val);
         Object resultObj = obj.getValue();
         assertNotNull(resultObj);
         assertTrue(resultObj instanceof String);
         String stringResult = (String)resultObj;
-        assertTrue(stringResult.equals(val));
+        assertEquals(stringResult, val);
     }
 
     @Test
@@ -353,15 +356,15 @@ public class CorbaPrimitiveHandlerTest extends Assert {
                                       null);
         assertNotNull(obj);
 
-        obj.setValueFromData(val.toString());
+        obj.setValueFromData(val);
         String result = obj.getDataFromValue();
-        assertTrue(val.equals(result));
+        assertEquals(val, result);
 
         obj.setValue(val);
         Object resultObj = obj.getValue();
         assertNotNull(resultObj);
         assertTrue(resultObj instanceof String);
         String stringResult = (String)resultObj;
-        assertTrue(stringResult.equals(val));
+        assertEquals(stringResult, val);
     }
 }
