@@ -48,17 +48,6 @@ import java.util.Set;
 import java.util.TreeMap;
 import java.util.logging.Logger;
 
-import javax.xml.bind.JAXBElement;
-import javax.xml.bind.JAXBException;
-import javax.xml.bind.Marshaller;
-import javax.xml.bind.Unmarshaller;
-import javax.xml.bind.annotation.XmlAccessOrder;
-import javax.xml.bind.annotation.XmlAccessType;
-import javax.xml.bind.annotation.XmlAccessorOrder;
-import javax.xml.bind.annotation.XmlAttribute;
-import javax.xml.bind.annotation.adapters.HexBinaryAdapter;
-import javax.xml.bind.attachment.AttachmentMarshaller;
-import javax.xml.bind.attachment.AttachmentUnmarshaller;
 import javax.xml.namespace.NamespaceContext;
 import javax.xml.namespace.QName;
 import javax.xml.stream.Location;
@@ -77,6 +66,18 @@ import org.w3c.dom.Element;
 import org.w3c.dom.NamedNodeMap;
 import org.w3c.dom.Node;
 
+import jakarta.xml.bind.JAXBElement;
+import jakarta.xml.bind.JAXBException;
+import jakarta.xml.bind.Marshaller;
+import jakarta.xml.bind.Unmarshaller;
+import jakarta.xml.bind.annotation.XmlAccessOrder;
+import jakarta.xml.bind.annotation.XmlAccessType;
+import jakarta.xml.bind.annotation.XmlAccessorOrder;
+import jakarta.xml.bind.annotation.XmlAttribute;
+import jakarta.xml.bind.annotation.XmlType;
+import jakarta.xml.bind.annotation.adapters.HexBinaryAdapter;
+import jakarta.xml.bind.attachment.AttachmentMarshaller;
+import jakarta.xml.bind.attachment.AttachmentUnmarshaller;
 import org.apache.cxf.common.i18n.Message;
 import org.apache.cxf.common.jaxb.JAXBUtils;
 import org.apache.cxf.common.logging.LogUtils;
@@ -195,7 +196,7 @@ public final class JAXBEncoderDecoder {
             // generate the xml declaration.
             marshaller.setProperty(Marshaller.JAXB_FRAGMENT, true);
             marshaller.setProperty(Marshaller.JAXB_FORMATTED_OUTPUT, false);
-        } catch (javax.xml.bind.PropertyException e) {
+        } catch (jakarta.xml.bind.PropertyException e) {
             // intentionally empty.
         }
 
@@ -243,7 +244,7 @@ public final class JAXBEncoderDecoder {
                         writeObject(marshaller, source, newJAXBElement(elName, cls, mObj));
                     }
                 } else if (byte[].class == cls && part.getTypeQName() != null
-                           && part.getTypeQName().getLocalPart().equals("hexBinary")) {
+                           && "hexBinary".equals(part.getTypeQName().getLocalPart())) {
                     mObj = new HexBinaryAdapter().marshal((byte[])mObj);
                     writeObject(marshaller, source, newJAXBElement(elName, String.class, mObj));
                 } else if (mObj instanceof JAXBElement) {
@@ -260,13 +261,11 @@ public final class JAXBEncoderDecoder {
             }
         } catch (Fault ex) {
             throw ex;
+        } catch (jakarta.xml.bind.MarshalException ex) {
+            Message faultMessage = new Message("MARSHAL_ERROR", LOG, ex.getLinkedException()
+                .getMessage());
+            throw new Fault(faultMessage, ex);
         } catch (Exception ex) {
-            if (ex instanceof javax.xml.bind.MarshalException) {
-                javax.xml.bind.MarshalException marshalEx = (javax.xml.bind.MarshalException)ex;
-                Message faultMessage = new Message("MARSHAL_ERROR", LOG, marshalEx.getLinkedException()
-                    .getMessage());
-                throw new Fault(faultMessage, ex);
-            }
             throw new Fault(new Message("MARSHAL_ERROR", LOG, ex.getMessage()), ex);
         }
     }
@@ -284,7 +283,7 @@ public final class JAXBEncoderDecoder {
     //TODO: cache the JAXBRIContext
     public static void marshalWithBridge(QName qname,
                                          Class<?> cls,
-                                         Annotation anns[],
+                                         Annotation[] anns,
                                          Set<Class<?>> ctxClasses,
                                          Object elValue,
                                          Object source, AttachmentMarshaller am) {
@@ -305,13 +304,11 @@ public final class JAXBEncoderDecoder {
             } else {
                 throw new Fault(new Message("UNKNOWN_SOURCE", LOG, source.getClass().getName()));
             }
+        } catch (jakarta.xml.bind.MarshalException ex) {
+            Message faultMessage = new Message("MARSHAL_ERROR", LOG, ex.getLinkedException()
+                .getMessage());
+            throw new Fault(faultMessage, ex);
         } catch (Exception ex) {
-            if (ex instanceof javax.xml.bind.MarshalException) {
-                javax.xml.bind.MarshalException marshalEx = (javax.xml.bind.MarshalException)ex;
-                Message faultMessage = new Message("MARSHAL_ERROR", LOG, marshalEx.getLinkedException()
-                    .getMessage());
-                throw new Fault(faultMessage, ex);
-            }
             throw new Fault(new Message("MARSHAL_ERROR", LOG, ex.getMessage()), ex);
         }
 
@@ -320,7 +317,7 @@ public final class JAXBEncoderDecoder {
 //  TODO: cache the JAXBRIContext
     public static Object unmarshalWithBridge(QName qname,
                                              Class<?> cls,
-                                             Annotation anns[],
+                                             Annotation[] anns,
                                              Set<Class<?>> ctxClasses,
                                              Object source,
                                              AttachmentUnmarshaller am) {
@@ -338,13 +335,11 @@ public final class JAXBEncoderDecoder {
             } else {
                 throw new Fault(new Message("UNKNOWN_SOURCE", LOG, source.getClass().getName()));
             }
+        } catch (jakarta.xml.bind.MarshalException ex) {
+            Message faultMessage = new Message("MARSHAL_ERROR", LOG, ex.getLinkedException()
+                .getMessage());
+            throw new Fault(faultMessage, ex);
         } catch (Exception ex) {
-            if (ex instanceof javax.xml.bind.MarshalException) {
-                javax.xml.bind.MarshalException marshalEx = (javax.xml.bind.MarshalException)ex;
-                Message faultMessage = new Message("MARSHAL_ERROR", LOG, marshalEx.getLinkedException()
-                    .getMessage());
-                throw new Fault(faultMessage, ex);
-            }
             throw new Fault(new Message("MARSHAL_ERROR", LOG, ex.getMessage()), ex);
         }
 
@@ -425,7 +420,28 @@ public final class JAXBEncoderDecoder {
                     }
                 });
             }
-
+            XmlType xmlType = cls.getAnnotation(XmlType.class);
+            if (xmlType != null && xmlType.propOrder().length > 1 && !xmlType.propOrder()[0].isEmpty()) {
+                final List<String> orderList = Arrays.asList(xmlType.propOrder());
+                Collections.sort(combinedMembers, new Comparator<Member>() {
+                    public int compare(Member m1, Member m2) {
+                        String m1Name = getName(m1);
+                        String m2Name = getName(m2);
+                        int m1Index = orderList.indexOf(m1Name);
+                        int m2Index = orderList.indexOf(m2Name);
+                        if (m1Index != -1 && m2Index != -1) {
+                            return m1Index - m2Index;
+                        }
+                        if (m1Index == -1 && m2Index != -1) {
+                            return 1;
+                        }
+                        if (m1Index != -1 && m2Index == -1) {
+                            return -1;
+                        }
+                        return 0;
+                    }
+                });
+            }
             for (Member member : combinedMembers) {
                 if (member instanceof Field) {
                     Field f = (Field)member;
@@ -461,6 +477,17 @@ public final class JAXBEncoderDecoder {
         }
     }
 
+    private static String getName(Member m1) {
+        final String m1Name;
+        if (m1 instanceof Field) {
+            m1Name = ((Field)m1).getName();
+        } else {
+            int idx = m1.getName().startsWith("get") ? 3 : 2;
+            String name = m1.getName().substring(idx);
+            m1Name = Character.toLowerCase(name.charAt(0)) + name.substring(1);
+        }
+        return m1Name;
+    }
     private static void writeArrayObject(Marshaller marshaller,
                                          Object source,
                                          QName mname,
@@ -471,10 +498,10 @@ public final class JAXBEncoderDecoder {
             return;
         }
         Object objArray;
-        Class<?> cls = null;
+        final Class<?> cls;
         if (mObj instanceof List) {
             List<?> l = (List<?>)mObj;
-            objArray = l.toArray(new Object[l.size()]);
+            objArray = l.toArray();
             cls = null;
         } else {
             objArray = mObj;
@@ -512,7 +539,7 @@ public final class JAXBEncoderDecoder {
             }
 
             Class<?> cls = part.getTypeClass();
-            Object obj = null;
+            Object obj;
             try {
                 Constructor<?> cons = cls.getConstructor();
                 obj = cons.newInstance();
@@ -551,14 +578,13 @@ public final class JAXBEncoderDecoder {
                         Utils.setFieldValue(f, obj, o);
                     }
                 } else {
-                    String s = Character.toUpperCase(q.getLocalPart().charAt(0))
-                               + q.getLocalPart().substring(1);
+                    String s = StringUtils.capitalize(q.getLocalPart());
                     Method m = Utils.getMethod(cls, accessType, "get" + s);
                     if (m == null) {
                         m = Utils.getMethod(cls, accessType, "is" + s);
                     }
                     Type type = m.getGenericReturnType();
-                    Object o = null;
+                    Object o;
                     if (JAXBSchemaInitializer.isArray(type)) {
                         Class<?> compType = JAXBSchemaInitializer
                             .getArrayComponentType(type);
@@ -643,7 +669,7 @@ public final class JAXBEncoderDecoder {
     public static void marshallNullElement(Marshaller marshaller,
                                            Object source,
                                            MessagePartInfo part) {
-        Class<?> clazz = part != null ? (Class<?>)part.getTypeClass() : null;
+        Class<?> clazz = part != null ? part.getTypeClass() : null;
         try {
             writeObject(marshaller, source, newJAXBElement(part.getElementQName(), clazz, null));
         } catch (JAXBException e) {
@@ -656,14 +682,14 @@ public final class JAXBEncoderDecoder {
                                     Object source,
                                     MessagePartInfo part,
                                     boolean unwrap) {
-        Class<?> clazz = part != null ? (Class<?>)part.getTypeClass() : null;
-        if (clazz != null && Exception.class.isAssignableFrom(clazz) && part != null
+        Class<?> clazz = part != null ? part.getTypeClass() : null;
+        if (clazz != null && Exception.class.isAssignableFrom(clazz)
             && Boolean.TRUE.equals(part.getProperty(JAXBDataBinding.class.getName() + ".CUSTOM_EXCEPTION"))) {
             return unmarshallException(u, source, part);
         }
 
         QName elName = part != null ? part.getConcreteName() : null;
-        if (clazz != null && clazz.isArray() && part != null
+        if (clazz != null && clazz.isArray()
             && part.getXmlSchema() instanceof XmlSchemaElement) {
             XmlSchemaElement el = (XmlSchemaElement)part.getXmlSchema();
 
@@ -697,8 +723,8 @@ public final class JAXBEncoderDecoder {
                 }
                 return o;
             }
-        } else if (byte[].class == clazz && part != null && part.getTypeQName() != null
-                   && part.getTypeQName().getLocalPart().equals("hexBinary")) {
+        } else if (byte[].class == clazz && part.getTypeQName() != null
+                   && "hexBinary".equals(part.getTypeQName().getLocalPart())) {
 
             String obj = (String)unmarshall(u, source, elName, String.class, unwrap);
             return new HexBinaryAdapter().unmarshal(obj);
@@ -711,7 +737,7 @@ public final class JAXBEncoderDecoder {
         Object o = unmarshall(u, source, elName, clazz, unwrap);
         if (o != null && o.getClass().isArray() && isList(part)) {
             List<Object> ret = createList(part);
-            ret.addAll(Arrays.asList((Object[])o));
+            Collections.addAll(ret, (Object[])o);
             o = ret;
         }
         return o;
@@ -737,7 +763,7 @@ public final class JAXBEncoderDecoder {
         }
         Collection<Object> c;
         try {
-            c = CastUtils.cast((Collection<?>)tp2.newInstance());
+            c = CastUtils.cast((Collection<?>)tp2.getDeclaredConstructor().newInstance());
         } catch (Exception e) {
             c = new HashSet<>();
         }
@@ -774,7 +800,7 @@ public final class JAXBEncoderDecoder {
                 Class<?> cls = (Class<?>)tp2;
                 if (!cls.isInterface() && List.class.isAssignableFrom(cls)) {
                     try {
-                        return CastUtils.cast((List<?>)cls.newInstance());
+                        return CastUtils.cast((List<?>)cls.getDeclaredConstructor().newInstance());
                     } catch (Exception e) {
                         // ignore, just return an ArrayList
                     }
@@ -810,7 +836,7 @@ public final class JAXBEncoderDecoder {
                                       final Class<?> clazz,
                                       final boolean unwrap) throws Exception {
 
-        Object obj = null;
+        final Object obj;
         boolean unmarshalWithClass = true;
 
         if (clazz == null
@@ -824,8 +850,8 @@ public final class JAXBEncoderDecoder {
         }
 
         if (clazz != null
-            && (clazz.getName().equals("javax.xml.datatype.XMLGregorianCalendar")
-                || clazz.getName().equals("javax.xml.datatype.Duration"))) {
+            && ("javax.xml.datatype.XMLGregorianCalendar".equals(clazz.getName())
+                || "javax.xml.datatype.Duration".equals(clazz.getName()))) {
             // special treat two jaxb defined built-in abstract types
             unmarshalWithClass = true;
         }
@@ -898,8 +924,8 @@ public final class JAXBEncoderDecoder {
             if (ex instanceof Fault) {
                 throw (Fault)ex;
             }
-            if (ex instanceof javax.xml.bind.UnmarshalException) {
-                javax.xml.bind.UnmarshalException unmarshalEx = (javax.xml.bind.UnmarshalException)ex;
+            if (ex instanceof jakarta.xml.bind.UnmarshalException) {
+                jakarta.xml.bind.UnmarshalException unmarshalEx = (jakarta.xml.bind.UnmarshalException)ex;
                 if (unmarshalEx.getLinkedException() != null) {
                     throw new Fault(new Message("UNMARSHAL_ERROR", LOG,
                                             unmarshalEx.getLinkedException().getMessage()), ex);
@@ -925,7 +951,7 @@ public final class JAXBEncoderDecoder {
         //anyway.
 
         NamespaceContext c = source.getNamespaceContext();
-        final Map<String, String> nsMap = new TreeMap<String, String>();
+        final Map<String, String> nsMap = new TreeMap<>();
         try {
             if (c instanceof W3CNamespaceContext) {
                 Element element = ((W3CNamespaceContext)c).getElement();
@@ -933,7 +959,7 @@ public final class JAXBEncoderDecoder {
                     NamedNodeMap namedNodeMap = element.getAttributes();
                     for (int i = 0; i < namedNodeMap.getLength(); i++) {
                         Attr attr = (Attr)namedNodeMap.item(i);
-                        if (attr.getPrefix() != null && attr.getPrefix().equals("xmlns")) {
+                        if (attr.getPrefix() != null && "xmlns".equals(attr.getPrefix())) {
                             nsMap.put(attr.getLocalName(), attr.getValue());
                         }
                     }
@@ -950,7 +976,7 @@ public final class JAXBEncoderDecoder {
                 }
                 Field f = ReflectionUtil.getDeclaredField(c.getClass(), "mNamespaces");
                 ReflectionUtil.setAccessible(f);
-                String ns[] = (String[])f.get(c);
+                String[] ns = (String[])f.get(c);
                 for (int x = 0; x < ns.length; x += 2) {
                     if (ns[x] == null) {
                         nsMap.put("", ns[x + 1]);
@@ -989,7 +1015,7 @@ public final class JAXBEncoderDecoder {
             }
             if (!nsMap.isEmpty()) {
                 @SuppressWarnings("unchecked")
-                final Map.Entry<String, String> namespaces[]
+                final Map.Entry<String, String>[] namespaces
                     = nsMap.entrySet().toArray(new Map.Entry[nsMap.size()]);
                 //OK. we have extra namespaces.  We'll need to wrapper the reader
                 //with a new one that will fake extra namespace events
@@ -1083,12 +1109,10 @@ public final class JAXBEncoderDecoder {
             return ret;
         } catch (Fault ex) {
             throw ex;
+        } catch (jakarta.xml.bind.MarshalException ex) {
+            throw new Fault(new Message("UNMARSHAL_ERROR", LOG, ex.getLinkedException()
+                .getMessage()), ex);
         } catch (Exception ex) {
-            if (ex instanceof javax.xml.bind.UnmarshalException) {
-                javax.xml.bind.UnmarshalException unmarshalEx = (javax.xml.bind.UnmarshalException)ex;
-                throw new Fault(new Message("UNMARSHAL_ERROR", LOG, unmarshalEx.getLinkedException()
-                    .getMessage()), ex);
-            }
             throw new Fault(new Message("UNMARSHAL_ERROR", LOG, ex.getMessage()), ex);
         }
     }
