@@ -19,8 +19,8 @@
 
 package org.apache.cxf.jaxrs.ext.search;
 
-import javax.ws.rs.GET;
-import javax.xml.bind.annotation.XmlRootElement;
+import jakarta.ws.rs.GET;
+import jakarta.xml.bind.annotation.XmlRootElement;
 
 
 @XmlRootElement(name = "Book")
@@ -62,7 +62,7 @@ public class Book implements Comparable<Book> {
     }
 
     public int hashCode() {
-        return name.hashCode() * 37 + new Long(id).hashCode();
+        return name.hashCode() * 37 + Long.valueOf(id).hashCode();
     }
 
     public boolean equals(Object o) {
@@ -76,8 +76,8 @@ public class Book implements Comparable<Book> {
     }
 
     public int compareTo(Book b) {
-        Long i1 = new Long(getId());
-        Long i2 = new Long(b.getId());
+        Long i1 = Long.valueOf(getId());
+        Long i2 = Long.valueOf(b.getId());
         return i1.compareTo(i2);
     }
 }
