@@ -56,12 +56,14 @@ import javax.crypto.SecretKey;
 import javax.crypto.spec.GCMParameterSpec;
 import javax.crypto.spec.IvParameterSpec;
 import javax.crypto.spec.SecretKeySpec;
+import javax.security.auth.DestroyFailedException;
 
 import org.apache.cxf.common.classloader.ClassLoaderUtils;
 import org.apache.cxf.common.util.Base64UrlUtility;
 import org.apache.cxf.common.util.Base64Utility;
 import org.apache.cxf.common.util.CompressionUtils;
 import org.apache.cxf.helpers.IOUtils;
+import org.apache.cxf.helpers.JavaUtils;
 
 
 /**
@@ -75,7 +77,8 @@ public final class CryptoUtils {
     public static void installBouncyCastleProvider() throws Exception {
         final String bcClassName = "org.bouncycastle.jce.provider.BouncyCastleProvider";
         if (Security.getProvider(bcClassName) == null) {
-            Security.addProvider((Provider)ClassLoaderUtils.loadClass(bcClassName, CryptoUtils.class).newInstance());
+            Security.addProvider((Provider)ClassLoaderUtils.loadClass(bcClassName, CryptoUtils.class)
+                                 .getDeclaredConstructor().newInstance());
         }
     }
     public static void removeBouncyCastleProvider() {
@@ -484,9 +487,18 @@ public final class CryptoUtils {
                                        String keyAlgo,
                                        Key wrapperKey,
                                        KeyProperties wrapperKeyProps)  throws SecurityException {
-        return wrapSecretKey(new SecretKeySpec(keyBytes, convertJCECipherToSecretKeyName(keyAlgo)),
+        SecretKeySpec secretKey = new SecretKeySpec(keyBytes, convertJCECipherToSecretKeyName(keyAlgo));
+        byte[] encryptedKey = wrapSecretKey(secretKey,
                              wrapperKey,
                              wrapperKeyProps);
+
+        // Here we're finished with the SecretKey we created, so we can destroy it
+        try {
+            secretKey.destroy();
+        } catch (DestroyFailedException e) {
+            // ignore
+        }
+        return encryptedKey;
     }
 
     public static byte[] wrapSecretKey(Key secretKey,
@@ -544,13 +556,14 @@ public final class CryptoUtils {
                 result = c.doFinal(bytes);
             } else {
                 if (blockSize == -1) {
-                    String javaVersion = System.getProperty("java.version");
-                    if (javaVersion.startsWith("9") || isJava8Release161OrLater(javaVersion)) {
+                    if (JavaUtils.isJava8Before161()) {
+                        blockSize = secretKey instanceof PublicKey ? 117 : 128;
+                    } else if (JavaUtils.getJavaMajorVersion() < 19) {
                         //the default block size is 256 when use private key under java9
                         blockSize = secretKey instanceof PublicKey ? 117 : 256;
                     } else {
-
-                        blockSize = secretKey instanceof PublicKey ? 117 : 128;
+                        //the default block size is 384 when use private key after java19
+                        blockSize = secretKey instanceof PublicKey ? 117 : 384;
                     }
                 }
                 boolean updateRequired = keyProps != null && keyProps.getAdditionalData() != null;
@@ -573,10 +586,6 @@ public final class CryptoUtils {
         } catch (Exception ex) {
             throw new SecurityException(ex);
         }
-    }
-
-    private static boolean isJava8Release161OrLater(String javaVersion) {
-        return javaVersion.startsWith("1.8.0_") && Integer.parseInt(javaVersion.substring(6)) >= 161;
     }
 
     public static Cipher initCipher(Key secretKey, KeyProperties keyProps, int mode)  throws SecurityException {
