@@ -34,11 +34,16 @@ import org.apache.cxf.ws.rm.v200702.SequenceAcknowledgement;
 import org.easymock.EasyMock;
 import org.easymock.IMocksControl;
 import org.junit.After;
-import org.junit.Assert;
 import org.junit.Before;
 import org.junit.Test;
 
-public class SourceSequenceTest extends Assert {
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertNotNull;
+import static org.junit.Assert.assertSame;
+import static org.junit.Assert.assertTrue;
+
+public class SourceSequenceTest {
 
     private IMocksControl control;
     private ObjectFactory factory;
@@ -68,7 +73,7 @@ public class SourceSequenceTest extends Assert {
         rq = null;
     }
 
-    void setUpSource() {
+    protected void setUpSource() {
         source = control.createMock(Source.class);
         manager = control.createMock(RMManager.class);
         EasyMock.expect(source.getManager()).andReturn(manager).anyTimes();
@@ -92,28 +97,26 @@ public class SourceSequenceTest extends Assert {
         Identifier otherId = factory.createIdentifier();
         otherId.setValue("otherSeq");
 
-        SourceSequence seq = null;
-
-        seq = new SourceSequence(id, ProtocolVariation.RM10WSA200408);
+        SourceSequence seq = new SourceSequence(id, ProtocolVariation.RM10WSA200408);
         assertEquals(id, seq.getIdentifier());
-        assertTrue(!seq.isLastMessage());
-        assertTrue(!seq.isExpired());
+        assertFalse(seq.isLastMessage());
+        assertFalse(seq.isExpired());
         assertEquals(0, seq.getCurrentMessageNr());
         assertNotNull(seq.getAcknowledgement());
         assertEquals(0, seq.getAcknowledgement().getAcknowledgementRange().size());
-        assertTrue(!seq.allAcknowledged());
+        assertFalse(seq.allAcknowledged());
         assertFalse(seq.offeredBy(otherId));
 
         Date expiry = new Date(System.currentTimeMillis() + 3600 * 1000);
 
         seq = new SourceSequence(id, expiry, null, ProtocolVariation.RM10WSA200408);
         assertEquals(id, seq.getIdentifier());
-        assertTrue(!seq.isLastMessage());
-        assertTrue(!seq.isExpired());
+        assertFalse(seq.isLastMessage());
+        assertFalse(seq.isExpired());
         assertEquals(0, seq.getCurrentMessageNr());
         assertNotNull(seq.getAcknowledgement());
         assertEquals(0, seq.getAcknowledgement().getAcknowledgementRange().size());
-        assertTrue(!seq.allAcknowledged());
+        assertFalse(seq.allAcknowledged());
         assertFalse(seq.offeredBy(otherId));
 
         seq = new SourceSequence(id, expiry, otherId, ProtocolVariation.RM10WSA200408);
@@ -128,7 +131,7 @@ public class SourceSequenceTest extends Assert {
         Expires expires = factory.createExpires();
         seq.setExpires(expires);
 
-        assertTrue(!seq.isExpired());
+        assertFalse(seq.isExpired());
 
         Duration d = DatatypeFactory.PT0S;
         expires.setValue(d);
@@ -136,13 +139,13 @@ public class SourceSequenceTest extends Assert {
         try {
             Thread.sleep(1000);
         } catch (InterruptedException ex) {
-            assertTrue(!seq.isExpired());
+            assertFalse(seq.isExpired());
         }
 
         d = DatatypeFactory.createDuration("PT1S");
         expires.setValue(d);
         seq.setExpires(expires);
-        assertTrue(!seq.isExpired());
+        assertFalse(seq.isExpired());
 
         d = DatatypeFactory.createDuration("-PT1S");
         expires.setValue(d);
@@ -154,14 +157,14 @@ public class SourceSequenceTest extends Assert {
     public void testEqualsAndHashCode() {
         SourceSequence seq = new SourceSequence(id, ProtocolVariation.RM10WSA200408);
         SourceSequence otherSeq = null;
-        assertTrue(!seq.equals(otherSeq));
+        assertFalse(seq.equals(otherSeq));
         otherSeq = new SourceSequence(id, ProtocolVariation.RM10WSA200408);
         assertEquals(seq, otherSeq);
         assertEquals(seq.hashCode(), otherSeq.hashCode());
         Identifier otherId = factory.createIdentifier();
         otherId.setValue("otherSeq");
         otherSeq = new SourceSequence(otherId, ProtocolVariation.RM10WSA200408);
-        assertTrue(!seq.equals(otherSeq));
+        assertFalse(seq.equals(otherSeq));
         assertTrue(seq.hashCode() != otherSeq.hashCode());
     }
 
@@ -171,20 +174,19 @@ public class SourceSequenceTest extends Assert {
         setUpSource();
         seq.setSource(source);
 
-        SequenceAcknowledgement ack = seq.getAcknowledgement();
-        ack = factory.createSequenceAcknowledgement();
+        SequenceAcknowledgement ack = factory.createSequenceAcknowledgement();
         SequenceAcknowledgement.AcknowledgementRange r =
             factory.createSequenceAcknowledgementAcknowledgementRange();
-        r.setLower(new Long(1));
-        r.setUpper(new Long(2));
+        r.setLower(Long.valueOf(1));
+        r.setUpper(Long.valueOf(2));
         ack.getAcknowledgementRange().add(r);
         r = factory.createSequenceAcknowledgementAcknowledgementRange();
-        r.setLower(new Long(4));
-        r.setUpper(new Long(6));
+        r.setLower(Long.valueOf(4));
+        r.setUpper(Long.valueOf(6));
         ack.getAcknowledgementRange().add(r);
         r = factory.createSequenceAcknowledgementAcknowledgementRange();
-        r.setLower(new Long(8));
-        r.setUpper(new Long(10));
+        r.setLower(Long.valueOf(8));
+        r.setUpper(Long.valueOf(10));
         ack.getAcknowledgementRange().add(r);
         rq.purgeAcknowledged(seq);
         EasyMock.expectLastCall();
@@ -193,7 +195,7 @@ public class SourceSequenceTest extends Assert {
         seq.setAcknowledged(ack);
         assertSame(ack, seq.getAcknowledgement());
         assertEquals(3, ack.getAcknowledgementRange().size());
-        assertTrue(!seq.isAcknowledged(3));
+        assertFalse(seq.isAcknowledged(3));
         assertTrue(seq.isAcknowledged(5));
         control.verify();
     }
@@ -206,29 +208,28 @@ public class SourceSequenceTest extends Assert {
         setUpSource();
         seq.setSource(source);
 
-        assertTrue(!seq.allAcknowledged());
+        assertFalse(seq.allAcknowledged());
         seq.setLastMessage(true);
-        assertTrue(!seq.allAcknowledged());
+        assertFalse(seq.allAcknowledged());
         SequenceAcknowledgement ack = factory.createSequenceAcknowledgement();
         SequenceAcknowledgement.AcknowledgementRange r =
             factory.createSequenceAcknowledgementAcknowledgementRange();
-        r.setLower(new Long(1));
-        r.setUpper(new Long(2));
+        r.setLower(Long.valueOf(1));
+        r.setUpper(Long.valueOf(2));
         ack.getAcknowledgementRange().add(r);
         rq.purgeAcknowledged(seq);
         EasyMock.expectLastCall();
 
         control.replay();
         seq.setAcknowledged(ack);
-        assertTrue(!seq.allAcknowledged());
-        r.setUpper(new Long(4));
+        assertFalse(seq.allAcknowledged());
+        r.setUpper(Long.valueOf(4));
         assertTrue(seq.allAcknowledged());
         control.verify();
     }
 
     @Test
     public void testNextMessageNumber() throws RMException {
-        SourceSequence seq = null;
         setUpSource();
         rq.purgeAcknowledged(EasyMock.isA(SourceSequence.class));
         EasyMock.expectLastCall().anyTimes();
@@ -236,9 +237,9 @@ public class SourceSequenceTest extends Assert {
 
         // default termination policy
 
-        seq = new SourceSequence(id, ProtocolVariation.RM10WSA200408);
+        SourceSequence seq = new SourceSequence(id, ProtocolVariation.RM10WSA200408);
         seq.setSource(source);
-        assertTrue(!nextMessages(seq, 10));
+        assertFalse(nextMessages(seq, 10));
         control.verify();
 
         // termination policy max length = 1
@@ -254,7 +255,7 @@ public class SourceSequenceTest extends Assert {
         seq = new SourceSequence(id, ProtocolVariation.RM10WSA200408);
         seq.setSource(source);
         stp.setMaxLength(5);
-        assertTrue(!nextMessages(seq, 2));
+        assertFalse(nextMessages(seq, 2));
         control.verify();
 
         // termination policy max range exceeded
@@ -275,7 +276,7 @@ public class SourceSequenceTest extends Assert {
         stp.setMaxLength(0);
         stp.setMaxRanges(4);
         acknowledge(seq, 1, 2, 4, 5, 6, 8, 9, 10);
-        assertTrue(!nextMessages(seq, 10));
+        assertFalse(nextMessages(seq, 10));
         control.verify();
 
         // termination policy max unacknowledged
@@ -296,8 +297,6 @@ public class SourceSequenceTest extends Assert {
 
     @Test
     public void testCheckOfferingSequenceClosed() {
-        SourceSequence seq = null;
-
         setUpSource();
 
         RMEndpoint rme = control.createMock(RMEndpoint.class);
@@ -307,12 +306,12 @@ public class SourceSequenceTest extends Assert {
         DestinationSequence dseq = control.createMock(DestinationSequence.class);
         Identifier did = control.createMock(Identifier.class);
         EasyMock.expect(destination.getSequence(did)).andReturn(dseq).anyTimes();
-        EasyMock.expect(dseq.getLastMessageNumber()).andReturn(new Long(1)).anyTimes();
+        EasyMock.expect(dseq.getLastMessageNumber()).andReturn(Long.valueOf(1)).anyTimes();
         EasyMock.expect(did.getValue()).andReturn("dseq").anyTimes();
 
         control.replay();
 
-        seq = new SourceSequence(id, null, did, ProtocolVariation.RM10WSA200408);
+        SourceSequence seq = new SourceSequence(id, null, did, ProtocolVariation.RM10WSA200408);
         seq.setSource(source);
         seq.nextMessageNumber(did, 1, false);
         assertTrue(seq.isLastMessage());
@@ -336,14 +335,14 @@ public class SourceSequenceTest extends Assert {
         while (i < messageNumbers.length) {
             SequenceAcknowledgement.AcknowledgementRange r =
                 factory.createSequenceAcknowledgementAcknowledgementRange();
-            Long l = new Long(messageNumbers[i]);
+            Long l = Long.valueOf(messageNumbers[i]);
             r.setLower(l);
             i++;
 
             while (i < messageNumbers.length && (messageNumbers[i] - messageNumbers[i - 1]) == 1) {
                 i++;
             }
-            Long u = new Long(messageNumbers[i - 1]);
+            Long u = Long.valueOf(messageNumbers[i - 1]);
             r.setUpper(u);
             ack.getAcknowledgementRange().add(r);
         }
