@@ -25,11 +25,15 @@ import java.util.StringTokenizer;
 import org.apache.cxf.common.util.StringUtils;
 import org.apache.cxf.tools.common.toolspec.ToolSpec;
 
-import org.junit.Assert;
 import org.junit.Before;
 import org.junit.Test;
 
-public class CommandLineParserTest extends Assert {
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertNotNull;
+import static org.junit.Assert.assertTrue;
+import static org.junit.Assert.fail;
+
+public class CommandLineParserTest {
     private CommandLineParser parser;
 
     @Before
@@ -247,7 +251,7 @@ public class CommandLineParserTest extends Assert {
     private boolean isQuolifiedVersion() {
         try {
             Class<?> c = Class.forName("org.apache.xerces.impl.Version");
-            Object o = c.newInstance();
+            Object o = c.getDeclaredConstructor().newInstance();
             String v = (String) c.getMethod("getVersion").invoke(o);
             v = StringUtils.getFirstFound(v, "(\\d+.\\d+)").trim();
             if (v.charAt(0) >= '3') {
@@ -303,12 +307,12 @@ public class CommandLineParserTest extends Assert {
         CommandLineParser commandLineParser = new CommandLineParser(null);
         commandLineParser.setToolSpec(toolspec);
         CommandDocument commandDocument = commandLineParser.parseArguments("-r unknown");
-        assertTrue(commandDocument != null);
+        assertNotNull(commandDocument);
     }
 
     @Test
     public void testGetDetailedUsage() {
-        assertTrue("Namespace".equals(parser.getDetailedUsage("namespace")));
+        assertEquals("Namespace", parser.getDetailedUsage("namespace"));
     }
 
 
