@@ -34,12 +34,12 @@ import java.util.TreeMap;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 
-import javax.xml.bind.JAXBContext;
-import javax.xml.bind.JAXBException;
 import javax.xml.stream.XMLStreamException;
 
 import org.w3c.dom.Document;
 
+import jakarta.xml.bind.JAXBContext;
+import jakarta.xml.bind.JAXBException;
 import org.apache.cxf.common.classloader.ClassLoaderUtils;
 import org.apache.cxf.common.i18n.Message;
 import org.apache.cxf.common.jaxb.JAXBUtils;
@@ -61,11 +61,11 @@ public final class PluginLoader {
     private static PluginLoader pluginLoader;
     private static final String PLUGIN_FILE_NAME = "META-INF/tools-plugin.xml";
 
-    private Map<String, Plugin> plugins = new LinkedHashMap<String, Plugin>();
+    private Map<String, Plugin> plugins = new LinkedHashMap<>();
 
-    private Map<String, FrontEnd> frontends = new LinkedHashMap<String, FrontEnd>();
+    private Map<String, FrontEnd> frontends = new LinkedHashMap<>();
 
-    private Map<String, DataBinding> databindings = new TreeMap<String, DataBinding>();
+    private Map<String, DataBinding> databindings = new TreeMap<>();
 
     private JAXBContext jaxbContext;
 
@@ -131,14 +131,14 @@ public final class PluginLoader {
         try {
             LOG.log(Level.FINE, "PLUGIN_LOADING", resource);
             loadPlugin(getPlugin(resource));
-        } catch (JAXBException e) {
-            Message msg = new Message("PLUGIN_LOAD_FAIL", LOG, resource);
-            LOG.log(Level.SEVERE, msg.toString());
-            throw new ToolException(msg, e);
         } catch (FileNotFoundException fe) {
             Message msg = new Message("PLUGIN_FILE_NOT_FOUND", LOG, resource);
             LOG.log(Level.SEVERE, msg.toString());
             throw new ToolException(msg, fe);
+        } catch (JAXBException | IOException e) {
+            Message msg = new Message("PLUGIN_LOAD_FAIL", LOG, resource);
+            LOG.log(Level.SEVERE, msg.toString());
+            throw new ToolException(msg, e);
         }
 
     }
@@ -188,10 +188,10 @@ public final class PluginLoader {
 
     protected Plugin getPlugin(URL url) throws IOException, JAXBException, FileNotFoundException {
         Plugin plugin = plugins.get(url.toString());
-        InputStream is = null;
         if (plugin == null) {
-            is = url.openStream();
-            plugin = getPlugin(is);
+            try (InputStream is = url.openStream()) {
+                plugin = getPlugin(is);
+            }
             if (plugin == null || StringUtils.isEmpty(plugin.getName())) {
                 Message msg = new Message("PLUGIN_LOAD_FAIL", LOG, url);
                 LOG.log(Level.SEVERE, msg.toString());
@@ -199,28 +199,26 @@ public final class PluginLoader {
             }
             plugins.put(url.toString(), plugin);
         }
-        if (is == null) {
-            return getPlugin(url.toString());
-        }
         return plugin;
     }
 
-    protected Plugin getPlugin(String resource) throws JAXBException, FileNotFoundException {
+    protected Plugin getPlugin(String resource) throws JAXBException, IOException, FileNotFoundException {
         Plugin plugin = plugins.get(resource);
         if (plugin == null) {
-            InputStream is = null;
-            if (new File(resource).exists()) {
-                is = new BufferedInputStream(new FileInputStream(new File(resource)));
-            } else {
-                is = getClass().getResourceAsStream(resource);
+            File resourceFile = new File(resource);
+
+            try (InputStream is = resourceFile.exists()
+                ? new BufferedInputStream(new FileInputStream(resourceFile))
+                : getClass().getResourceAsStream(resource)) {
+
+                if (is == null) {
+                    Message msg = new Message("PLUGIN_MISSING", LOG, resource);
+                    LOG.log(Level.SEVERE, msg.toString());
+                    throw new ToolException(msg);
+                }
+                plugin = getPlugin(is);
             }
 
-            if (is == null) {
-                Message msg = new Message("PLUGIN_MISSING", LOG, resource);
-                LOG.log(Level.SEVERE, msg.toString());
-                throw new ToolException(msg);
-            }
-            plugin = getPlugin(is);
             if (plugin == null || StringUtils.isEmpty(plugin.getName())) {
                 Message msg = new Message("PLUGIN_LOAD_FAIL", LOG, resource);
                 LOG.log(Level.SEVERE, msg.toString());
@@ -237,12 +235,6 @@ public final class PluginLoader {
             return JAXBUtils.unmarshall(jaxbContext, doc.getDocumentElement(), Plugin.class).getValue();
         } catch (XMLStreamException xse) {
             throw new JAXBException(xse);
-        } finally {
-            try {
-                is.close();
-            } catch (IOException e) {
-                //ignore
-            }
         }
     }
 
@@ -264,7 +256,7 @@ public final class PluginLoader {
         if (StringUtils.isEmpty(fullPackage)) {
             fullPackage = frontend.getPackage();
         }
-        return fullPackage + "." + generator.getName();
+        return fullPackage + '.' + generator.getName();
     }
 
     private List<FrontEndGenerator> getFrontEndGenerators(FrontEnd frontend) {
@@ -275,7 +267,7 @@ public final class PluginLoader {
             for (Generator generator : frontend.getGenerators().getGenerator()) {
                 fullClzName = getGeneratorClass(frontend, generator);
                 Class<?> clz = ClassLoaderUtils.loadClass(fullClzName, this.getClass());
-                generators.add((FrontEndGenerator)clz.newInstance());
+                generators.add((FrontEndGenerator)clz.getDeclaredConstructor().newInstance());
             }
         } catch (Exception e) {
             Message msg = new Message("FRONTEND_PROFILE_LOAD_FAIL", LOG, fullClzName);
@@ -287,10 +279,10 @@ public final class PluginLoader {
     }
 
     private FrontEndProfile loadFrontEndProfile(String fullClzName) {
-        FrontEndProfile profile = null;
+        final FrontEndProfile profile;
         try {
             Class<?> clz = ClassLoaderUtils.loadClass(fullClzName, this.getClass());
-            profile = (FrontEndProfile)clz.newInstance();
+            profile = (FrontEndProfile)clz.getDeclaredConstructor().newInstance();
         } catch (Exception e) {
             Message msg = new Message("FRONTEND_PROFILE_LOAD_FAIL", LOG, fullClzName);
             LOG.log(Level.SEVERE, msg.toString());
@@ -300,9 +292,10 @@ public final class PluginLoader {
     }
 
     private Processor loadProcessor(String fullClzName) {
-        Processor processor = null;
+        final Processor processor;
         try {
-            processor = (Processor) ClassLoaderUtils.loadClass(fullClzName, getClass()).newInstance();
+            processor = (Processor) ClassLoaderUtils.loadClass(fullClzName, getClass())
+                .getDeclaredConstructor().newInstance();
         } catch (Exception e) {
             Message msg = new Message("LOAD_PROCESSOR_FAILED", LOG, fullClzName);
             LOG.log(Level.SEVERE, msg.toString());
@@ -312,7 +305,7 @@ public final class PluginLoader {
     }
 
     private Class<? extends ToolContainer> loadContainerClass(String fullClzName) {
-        Class<?> clz = null;
+        final Class<?> clz;
         try {
             clz = ClassLoaderUtils.loadClass(fullClzName, getClass());
         } catch (Exception e) {
@@ -334,7 +327,7 @@ public final class PluginLoader {
         if (StringUtils.isEmpty(frontend.getProfile())) {
             return "org.apache.cxf.tools.wsdlto.core.FrontEndProfile";
         }
-        return frontend.getPackage() + "." + frontend.getProfile();
+        return frontend.getPackage() + '.' + frontend.getProfile();
     }
 
     private String getProcessorClass(FrontEnd frontend) {
@@ -342,11 +335,11 @@ public final class PluginLoader {
         if (StringUtils.isEmpty(pkgName)) {
             pkgName = frontend.getPackage();
         }
-        return pkgName + "." + frontend.getProcessor().getName();
+        return pkgName + '.' + frontend.getProcessor().getName();
     }
 
     private String getContainerClass(FrontEnd frontend) {
-        return getContainerPackage(frontend) + "." + frontend.getContainer().getName();
+        return getContainerPackage(frontend) + '.' + frontend.getContainer().getName();
     }
 
     private String getContainerPackage(FrontEnd frontend) {
@@ -359,14 +352,14 @@ public final class PluginLoader {
 
     private String getToolspec(FrontEnd frontend) {
         String toolspec = frontend.getContainer().getToolspec();
-        return "/" + getContainerPackage(frontend).replace(".", "/") + "/" + toolspec;
+        return '/' + getContainerPackage(frontend).replace('.', '/') + '/' + toolspec;
     }
 
     private AbstractWSDLBuilder loadBuilder(String fullClzName) {
-        AbstractWSDLBuilder builder = null;
+        final AbstractWSDLBuilder builder;
         try {
             builder = (AbstractWSDLBuilder) ClassLoaderUtils
-                .loadClass(fullClzName, getClass()).newInstance();
+                .loadClass(fullClzName, getClass()).getDeclaredConstructor().newInstance();
 
         } catch (Exception e) {
             Message msg = new Message("LOAD_PROCESSOR_FAILED", LOG, fullClzName);
@@ -381,14 +374,13 @@ public final class PluginLoader {
         if (StringUtils.isEmpty(pkgName)) {
             pkgName = frontend.getPackage();
         }
-        return pkgName + "." + frontend.getBuilder().getName();
+        return pkgName + '.' + frontend.getBuilder().getName();
     }
 
     public FrontEndProfile getFrontEndProfile(String name) {
-        FrontEndProfile profile = null;
         FrontEnd frontend = getFrontEnd(name);
 
-        profile = loadFrontEndProfile(getFrontEndProfileClass(frontend));
+        FrontEndProfile profile = loadFrontEndProfile(getFrontEndProfileClass(frontend));
 
         for (FrontEndGenerator generator : getFrontEndGenerators(frontend)) {
             profile.registerGenerator(generator);
@@ -417,10 +409,10 @@ public final class PluginLoader {
     }
 
     private DataBindingProfile loadDataBindingProfile(String fullClzName) {
-        DataBindingProfile profile = null;
+        final DataBindingProfile profile;
         try {
             profile = (DataBindingProfile)ClassLoaderUtils.loadClass(fullClzName,
-                                                                     getClass()).newInstance();
+                                                                     getClass()).getDeclaredConstructor().newInstance();
         } catch (Exception e) {
             Message msg = new Message("DATABINDING_PROFILE_LOAD_FAIL", LOG, fullClzName);
             LOG.log(Level.SEVERE, msg.toString());
@@ -430,10 +422,8 @@ public final class PluginLoader {
     }
 
     public DataBindingProfile getDataBindingProfile(String name) {
-        DataBindingProfile profile = null;
         DataBinding databinding = getDataBinding(name);
-        profile = loadDataBindingProfile(databinding.getPackage() + "." + databinding.getProfile());
-        return profile;
+        return loadDataBindingProfile(databinding.getPackage() + '.' + databinding.getProfile());
     }
 
     public Map<String, FrontEnd> getFrontEnds() {
